--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "uuid": "~1.4.1",
     "debug": "~0.7.4",
     "superagent": "~0.16.0",
-    "dependency-groups": "~0.1.0"
+    "dependency-groups": "~0.1.0",
+    "commander": "~2.1.0"
   },
   "devDependencies": {
     "mocha": "~1.17.0",
