--- a/associate/Makefile
+++ b/associate/Makefile
@@ -1,10 +1,10 @@
-VERSION=$(shell ../bin/docker_services --version)
+VERSION=$(shell ../bin/docker-services --version)
 .PHONY: build
 build:
 	docker build -t \
-		taskcluster/docker-service-associate:$(VERSION) .
+		lightsofapollo/docker-service-associate:$(VERSION) .
 
 .PHONY: test
 test: build
-	docker run -i taskcluster/docker-service-associate:$(VERSION) npm test
+	docker run -i lightsofapollo/docker-service-associate:$(VERSION) npm test
 	./node_modules/.bin/mocha test/integration_test.js
